tools/flowc/tests/errors/error46.flow
Maybe<?> ::= None, Some<?>;
None();
Some(value : ?);

foo(b) {
	// We could infer that a is Maybe<?>
	baz = \a -> {}

	baz(None());

	// b.value has to have the same type as b, and that is impossible
	baz(b.value);
	baz(b);

	baz(Some(None()));
}
